--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "precommit": "lint-staged",
     "pretest": "node bin/convert_translations.js",
     "flow": "flow",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "lint-staged": {
     "*.{js,jsx,css,scss}": [
@@ -84,6 +85,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
+    "faker": "^4.1.0",
     "flow-bin": "^0.48.0",
     "husky": "^0.13.4",
     "jest": "^20.0.4",
